--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
     "axios": "^1.7.7",
+    "classnames": "^2.5.1",
     "dotenv": "^16.4.5",
     "next": "14.2.14",
+    "query-string": "^9.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
